--- a/static/css/default.css
+++ b/static/css/default.css
@@ -3,6 +3,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f4f4f9;
+    text-align: center;
 }
 h1 {
     text-align: center;
@@ -16,7 +17,7 @@ h1 {
     flex-wrap: wrap;
     gap: 20px;
     justify-content: space-evenly;
-    text-align: center;
+    
 }
 .form-container {
     max-width: 500px;
@@ -29,11 +30,14 @@ h1 {
     display: block;
     text-decoration: none;
     color: inherit;
+    text-align: left;
 }
 .form-group {
     margin: 1rem;
     padding: 3px;
+    justify-content: flex-start;
 }
+
 
 .foto-perfil {
     width: 90px;
@@ -59,7 +63,7 @@ h1 {
 .nombre {
     font-size: 18px;
 }
-input, textarea {
+input[type = "text"],input[type = "email"], textarea {
     width: 100%;
     padding: 8px;
     margin: 5px 0;
@@ -68,7 +72,9 @@ input, textarea {
     border-radius: 4px;
     text-align: left;
     vertical-align: top;
+    resize: none;
 }
+
 .mensaje {
     height: 150px;
     text-overflow: ellipsis;
@@ -83,6 +89,5 @@ input, textarea {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    
 }
 .enviar:hover{ background-color: #367a39;}
