--- a/vistas/paginas/listajuegos.ejs
+++ b/vistas/paginas/listajuegos.ejs
@@ -1,10 +1,10 @@
 <h1>Lista de juegos</h1>
 
-<div class="juegos">
+<div class="games">
     <%showGameList()%>
 </div>
 
 <% function showGameList() { %>
 <%  gameList.forEach(game=>{ %>
-<a href="/game/<%=game.id%>"><%=game.titulo%></a> <p></p>
+<a href="/juegos/<%=game.id%>"><%=game.titulo%></a> <p></p> <!-- creo que /juegos/ es del app.js -->
 <% })} %>
