--- a/static/css/estilo.css
+++ b/static/css/estilo.css
@@ -10,6 +10,14 @@ div#contenedor {
 	margin-top: 30px;
 }
 
+div#game_list {
+	width: 1160px;
+	margin: auto;
+	border: 1px solid black;
+	background-color: #ecdbeb;
+	margin-top: 30px;
+}
+
 div#juego_info_superior {
 	width: 1170px;
 	margin: auto;
@@ -44,7 +52,17 @@ div#juego_info3 {
 	border: 1px solid rgb(87, 69, 79);
 	background-color: #dccfdf;
 	margin-top: 20px;
-	margin-left: 20px;
+	margin-left: 10px;
+}
+
+div#juego_info_in_list {
+	width: 520px;
+	float : left;
+	margin: auto;
+	border: 1px solid rgb(87, 69, 79);
+	background-color: #dccfdf;
+	margin-top: 20px;
+	margin-left: 30px;
 }
 
 header {
