--- a/views/pages/listajuegos.ejs
+++ b/views/pages/listajuegos.ejs
@@ -8,6 +8,10 @@
 
 <% function showGameList() { %>
 <%  gameList.forEach(game=>{ %>
+
+    <% console.log("DEBUG  LISTAJUEGOS.EJS") %>
+    <% console.log(game) %>
+
     <div id="juego_info_in_list">
         <%showGameInfo(game)%>
     </div>
@@ -15,11 +19,10 @@
 
 
 <%function showGameInfo(game){ %>
-    <h3 style="margin-left: 20px;"><a href="/juegos/<%=game.id%>"><%=game.titulo%></a></h3>
-    
+    <h3 style="margin-left: 20px;"><a href="/games/<%=game.id%>"><%=game.title%></a></h3>    
     <p>IMAGEN</p>
-    <p style="margin-left: 20px;">Valoracion media: <%=game.valoracion%> </p>
-    <p style="margin-left: 20px;"> Numero Favoritos: <%=game.numFavoritos%> </p>
+    <p style="margin-left: 20px;">Valoracion media: <%=game.rating%> </p>
+    <p style="margin-left: 20px;"> Numero Favoritos: <%=game.favNumber%> </p>
     
-    <p style="margin-left: 10px;">Descripción: <%=game.descripcion%></p>
+    <p style="margin-left: 10px;">Descripción: <%=game.description%></p>
 <% }%>
