--- a/views/partials/pie.ejs
+++ b/views/partials/pie.ejs
@@ -2,10 +2,10 @@
 <nav id="pie">
     <h3>Informacion Proyecto</h3>
 		<ul>
-			<li><a href="/informacion/miembros">Miembros</a></li>
-			<li><a href="/informacion/detalles">Detalles</a></li>
-            <li><a href="/informacion/contacto">Contacto</a></li>
-            <li><a href="/informacion/planificacion">Planificacion</a></li>
-            <li><a href="/informacion/bocetos">Bocetos</a></li>
+			<li><a href="information/members">Miembros</a></li>
+			<li><a href="information/details">Detalles</a></li>
+            <li><a href="information/contact">Contacto</a></li>
+            <li><a href="/information/planification">Planificacion</a></li>
+            <li><a href="information/sketches">Bocetos</a></li>
 
 </nav>
