--- a/static/css/estilo.css
+++ b/static/css/estilo.css
@@ -10,12 +10,44 @@ div#contenedor {
 	margin-top: 30px;
 }
 
+.contenedor-index{
+	width: 100%;
+	
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #efe9f0;
+    padding: 20px 0;
+	align-items: flex-start;
+}
+
+.bloque-index{
+	flex: 1; 
+    text-align: center;
+    padding: 10px;
+
+	border: 1px solid rgb(87, 69, 79);
+	background-color: #dccfdf;
+
+    margin-bottom: 10px;
+    border-radius: 5px;
+
+	margin-left: 10px;
+	margin-right: 10px;
+}
+
+.bloque img {
+    width: 80%; 
+    max-width: 150px; 
+    height: auto;
+    margin-top: 10px;
+}
+
 div#game_list {
-	width: 1160px;
-	margin: auto;
-	border: 1px solid black;
-	background-color: #ecdbeb;
-	margin-top: 30px;
+	display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px; 
+
 }
 
 div#juego_info_superior {
@@ -56,13 +88,14 @@ div#juego_info3 {
 }
 
 div#juego_info_in_list {
-	width: 520px;
-	float : left;
-	margin: auto;
 	border: 1px solid rgb(87, 69, 79);
 	background-color: #dccfdf;
-	margin-top: 20px;
-	margin-left: 30px;
+
+	padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+
+	margin-left: 10px;
 }
 
 header {
@@ -86,6 +119,8 @@ header a:hover {
 main {
 	padding: 20px;
 	min-height: 600px;
+	height:  auto;
+	/* min-height: 600px; */
 	width: 96.5%;
 	background-color: white;
 }
