--- a/views/pages/listajuegos.ejs
+++ b/views/pages/listajuegos.ejs
@@ -1,6 +1,13 @@
 <h1>Lista de juegos</h1>   
-<h3><label for = "game_title"> Busqueda:</label>
-    <input type = "text" name = "game_title" id = "game_title"></h3>
+
+<form action="/games/listajuegos" method="POST">
+
+    <h3><label for = "game_title"> Busqueda:</label>
+    <input type = "text" name = "game_title"> <button style="margin-left: 10px;" type="submit">Buscar</button></h3>
+
+    
+
+<%addGameOption()%>
 
 <div id="game_list">
     <%showGameList()%>
@@ -24,5 +31,12 @@
     <p style="margin-left: 20px;">Valoracion media: <%=game.rating%> </p>
     <p style="margin-left: 20px;"> Numero Favoritos: <%=game.favNumber%> </p>
     
-    <p style="margin-left: 10px;">Descripción: <%=game.description%></p>
+    <p style="margin-left: 20px;">Descripción: <%=game.description%></p>
 <% }%>
+
+
+
+<% function addGameOption() { %>
+    <%  if(1 == 1) { %>
+        <p> Herramientas admin : <a href="/games/addGame"> Añadir juego</a> </p>
+<% }} %>
