Añadido filtrados de busqueda lista juegos y modificar juegos por admins

--- a/views/pages/addGamePage.ejs
+++ b/views/pages/addGamePage.ejs
@@ -9,10 +9,10 @@
 		<p><strong><%= locals.exito %></strong></p>
 	<% } %>
 	<legend> Añadir Juego</legend>
-	<div><label>Titulo:</label> <input type="text" name="title" /></div>
-	<div><label>Descripcion:</label> <input type="text" name="description" /></div>
-	<div><label>Nota:</label> <input type="text" name="rating" /></div>
-	<div><label>Número Favoritos:</label> <input type="text" name="favNumber" /></div>
-	<div><label>Id compañía:</label> <input type="text" name="company_id" /></div>
+	<label>Titulo:</label> <input type="text" name="title" /> <p></p>
+	<label >Descripcion:</label> <input type="text" name="description" style= "width: 90%;height: 40px;"> <p></p>
+	<label>Nota:</label> <input type="text" name="rating" /><p></p>
+	<label>Número Favoritos:</label> <input type="text" name="favNumber" /><p></p>
+	<label>Id compañía:</label> <input type="text" name="company_id" /><p></p>
 	<button type="submit">Enviar</button>
 </fieldset>
