--- a/views/partials/cabecera.ejs
+++ b/views/partials/cabecera.ejs
@@ -18,6 +18,6 @@
 		<p>Bienvenido <%= session.nombre %>. 
 		<a href='/users/logout'> Logout</a> </p>
 	<% } else { %>   
-		Usuario desconocido. <a href='/users/login'> Login</a> <a href='/users/register'>Register</a>
+		<a href='/users/login'> Login</a> <a href='/users/register'>Register</a>
 	<% } %>
 <% } %>
