--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -6,7 +6,7 @@
 		<p><strong><%= locals.error %></strong></p>
 	<% } %>
 	<legend>Usuario y contraseña</legend>
-	<div><label>Nombre:</label> <input type="text" name="username" /></div>
-	<div><label>Contraseña:</label> <input type="password" name="password" /></div>
+	<div><label>Nombre:</label> <input type="text" name="username" required/></div>
+	<div><label>Contraseña:</label> <input type="password" name="password" required/></div>
 	<button type="submit">Enviar</button>
 </fieldset>
