--- a/views/pages/members.ejs
+++ b/views/pages/members.ejs
@@ -1,35 +1,37 @@
 <h1>Miembros del grupo</h1>
-    
+
 <div class="pagina-miembros">
-        <p><a href="#Ignacio"> Ignacio</a>, <a href="#Jorge"> Jorge</a>, <a href="#Alberto"> Alberto</a>, <a href="#Mael"> Maël</a>, <a href="#Cesar"> César</a></p>
-        <section class="miembros-container">
-            <section class="miembro">
-                <h2 id="Ignacio" class="nombre">Ignacio Andrés Doménech Arellano</h2>
-                <p><img src="/img/IADA.png" class="foto-perfil"></p>
-                <a href="mailto:ignadome@ucm.es">ignadome@ucm.es</a>
-                <p>Me encanta no hacer nada, perder el tiempo y hacer el vago. Lo mejor es que aun así espero sacar buenas notas.</p>
-            </section>
-            <section class="miembro">
-                <h2 id="Jorge" class="nombre">Jorge Rodríguez de la Osada</h2>
-                <p><img src="/img/FotoJorge.png" class="foto-perfil"></p>
-                <a href="mailto:jorrod06@ucm.es">jorrod06@ucm.es</a>
-                <p>El dürum es superior al kebab y no estoy dispuesto a discutirlo</p>
-            </section>
-            <section class="miembro">
-                <h2 id="Alberto" class="nombre">Alberto Delgado Cabrera</h2>
-                <p><img src="/img/ADC.png" class="foto-perfil"></p>
-                <a href="mailto:albede04@ucm.es">albede04@ucm.es</a>
-            </section>
-            <section class="miembro">
-                <h2 id="Mael" class="nombre">Maël Humberto García</h2>
-                <p><img src="/img/MHG.png" class="foto-perfil"></p>
-                <a href="mailto:maelhg01@ucm.es">maelhg01@ucm.es</a>
-                <p>Fan de Persona y Dark Souls. Videojuegos como estilo de vida.</p>
-            </section>
-            <section class="miembro">
-                <h2 id="Cesar" class="nombre">Cesar de Esteban Elvira</h2>
-                <p><img src="/img/CEE.png" class="foto-perfil"></p>
-                <a href="mailto:cesesteb@ucm.es">cesesteb@ucm.es</a>
-            </section>
+    <p><a href="#Ignacio"> Ignacio</a>, <a href="#Jorge"> Jorge</a>, <a href="#Alberto"> Alberto</a>, <a href="#Mael">
+            Maël</a>, <a href="#Cesar"> César</a></p>
+    <section class="miembros-container">
+        <section class="miembro">
+            <h2 id="Ignacio" class="nombre">Ignacio Andrés Doménech Arellano</h2>
+            <p><img src="/img/IADA.png" class="foto-perfil"></p>
+            <a href="mailto:ignadome@ucm.es">ignadome@ucm.es</a>
+            <p>Me encanta no hacer nada, perder el tiempo y hacer el vago. Lo mejor es que aun así espero sacar buenas
+                notas.</p>
         </section>
-    </div>
+        <section class="miembro">
+            <h2 id="Jorge" class="nombre">Jorge Rodríguez de la Osada</h2>
+            <p><img src="/img/FotoJorge.png" class="foto-perfil"></p>
+            <a href="mailto:jorrod06@ucm.es">jorrod06@ucm.es</a>
+            <p>El dürum es superior al kebab y no estoy dispuesto a discutirlo</p>
+        </section>
+        <section class="miembro">
+            <h2 id="Alberto" class="nombre">Alberto Delgado Cabrera</h2>
+            <p><img src="/img/ADC.png" class="foto-perfil"></p>
+            <a href="mailto:albede04@ucm.es">albede04@ucm.es</a>
+        </section>
+        <section class="miembro">
+            <h2 id="Mael" class="nombre">Maël Humberto García</h2>
+            <p><img src="/img/MHG.png" class="foto-perfil"></p>
+            <a href="mailto:maelhg01@ucm.es">maelhg01@ucm.es</a>
+            <p>Fan de Persona y Dark Souls. Videojuegos como estilo de vida.</p>
+        </section>
+        <section class="miembro">
+            <h2 id="Cesar" class="nombre">Cesar de Esteban Elvira</h2>
+            <p><img src="/img/CEE.png" class="foto-perfil"></p>
+            <a href="mailto:cesesteb@ucm.es">cesesteb@ucm.es</a>
+        </section>
+    </section>
+</div>
