--- a/views/pages/listajuegos.ejs
+++ b/views/pages/listajuegos.ejs
@@ -49,6 +49,6 @@
 
 
 <% function addGameOption() { %>
-    <%  if(1 == 1) { %>
+    <%  if(session.login && session.esAdmin) { %>
         <p> Herramientas admin : <a href="/games/addGame"> Añadir juego</a> </p>
 <% }} %>
