--- a/views/pages/foro.ejs
+++ b/views/pages/foro.ejs
@@ -21,4 +21,4 @@
         <p class="forum-desc">Descripción de autor sobre el motivo del foro y temas a abarcar</p>
         <button class="show-more">Ver más</button>
     </section>
-</section>
+</section> html->router->controller->clase->BD
