--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -6,7 +6,7 @@
         <form action="/users/register" method="GET">
             <button type="submit">Add Special User</button>
         </form>
-        <form action="/users/deleteUser" method="POST">
+        <form action="/users/listausuarios" method="GET">
             <button type="submit">Delete User</button>
         </form>
         <form action="/forum/deleteForum" method="POST">
