Empieza a funcionar algo

--- a/views/pages/modifyGenresPage.ejs
+++ b/views/pages/modifyGenresPage.ejs
@@ -1,28 +1,28 @@
-<h1> Modificacion de datos de un juego</h1>
+<h1> Modificación de datos de un juego</h1>
 
 <% if (1 === 1) { %>
-    <form action="/genres/modifyGenres/<%=game.id%>" method="POST">
-    <fieldset>
-        <% if (locals.error) { %>
-            <p><strong><%= locals.error %></strong></p>
-        <% } %>
-        <% if (locals.exito) { %>
-            <p><strong><%= locals.exito %></strong></p>
-        <% } %>
-        <legend> Modificar Generos</legend>   
-        <label>Titulo:</label> <input type="text" name="title"  value = "<%=game.title%>"> <p></p>
-        <button type="submit">Enviar</button>
-    </fieldset>
-<% }
+    <form action="/genres/modifyGenre/<%= game.id %>" method="POST">
+        <fieldset>
+            <% if (locals.error) { %>
+                <p><strong><%= locals.error %></strong></p>
+            <% } %>
+            <% if (locals.exito) { %>
+                <p><strong><%= locals.exito %></strong></p>
+            <% } %>
+            <legend> Modificar Géneros</legend>   
+            <label>Título:</label> 
+            <input type="text" name="title" value="<%= game.title %>">
+            <p></p>
+            <button type="submit">Enviar</button>
+        </fieldset>
+    </form>
+<% } %>
 
-<% function showGenreList() { %>
-    <%  genreList.forEach(genre=>{ %>
-            <%showGenreInfo(genre)%>
-            <button onclick="deleteGenre('<%= genre.id %>')">X Eliminar</button>
-<% })} %>
-
-<%showGenreInfo(genre){ %>
-    <div id = "bloque_genero">
-        <%=genre.name%>
-    </div>
+<% if (typeof genreList !== 'undefined') { %>
+    <% genreList.forEach(genre => { %>
+        <div id="bloque_genero">
+            <%= genre.name %>
+        </div>
+        <button onclick="deleteGenre('<%= genre.id %>')">X Eliminar</button>
+    <% }); %>
 <% } %>
