--- a/static/css/estilo.css
+++ b/static/css/estilo.css
@@ -43,7 +43,7 @@ div#contenedor {
     margin-top: 10px;
 }
 
-div#bloque-genero{
+div#bloque_genero{
 	flex: 1; 
     text-align: center;
     padding: 2px;
