--- a/views/pages/addGenrePage.ejs
+++ b/views/pages/addGenrePage.ejs
@@ -1,4 +1,4 @@
-<form action="/games/addGenre" method="POST">
+<form action="/genres/addGenre" method="POST">
 <fieldset>
 	<% if (locals.error) { %>
 		<p><strong><%= locals.error %></strong></p>
