--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,4 +1,4 @@
-<h1>Acceso al sistema</h1>
+<h1>Account Access</h1>
 
 <form action="/users/login" method="POST">
 <fieldset>
@@ -9,4 +9,5 @@
 	<div><label>Nombre:</label> <input type="text" name="username" /></div>
 	<div><label>Contraseña:</label> <input type="password" name="password" /></div>
 	<button type="submit">Enviar</button>
+	<div><a href="/users/register">New User?</a></div>
 </fieldset>
