--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -1,4 +1,4 @@
-<h1>Registro de nuevo usuario</h1>
+<h1>New User Registry</h1>
 
 <form action="/users/register" method="POST">
 <fieldset>
@@ -10,6 +10,7 @@
 	<div><label>Contraseña:</label> <input type="password" name="password" required/></div>
 	<%userOption(session)%>
 	<button type="submit">Enviar</button>
+    <div><a href="/users/login">Have Account?</a></div>
 </fieldset>
 
 
