--- a/views/pages/listajuegos.ejs
+++ b/views/pages/listajuegos.ejs
@@ -20,6 +20,7 @@
         </select>
 
     </h4>
+</form>
     <% addGameOption() %>
 
     <div id="game_list">
@@ -29,19 +30,10 @@
     <% function showGameList() { %>
         <% gameList.forEach(game=>{ %>
 
-            <% console.log("DEBUG  LISTAJUEGOS.EJS") %>
-            <% console.log(game) %>
-
             <div id="juego_info_in_list">
                 <% showGameInfo(game) %>
             </div>
     <% })} %>
-    <% function showGameInfo(game){ %>
-        <h3 style="margin-left: 20px;"><a href="/games/<%= game.id %>"><%= game.title %></a></h3>
-        <p>IMAGEN</p>
-        <p style="margin-left: 20px;">Valoracion media: <%= game.rating %> </p>
-        <p style="margin-left: 20px;"> Numero Favoritos: <%= game.favNumber %> </p>
-    <% } %>
 
     <% function showGameInfo(game){ %>
     <h3 style="margin-left: 20px;"><a href="/games/<%= game.id %>"><%= game.title %></a></h3>
