--- a/views/pages/modifyGamePage.ejs
+++ b/views/pages/modifyGamePage.ejs
@@ -17,6 +17,8 @@
         <label>Id compañía:</label> <input type="text" name="company_id" value = "<%=game.company%>" /><p></p>
         <button type="submit">Enviar</button>
     </fieldset>
+    </form>
+
 <% } else { %>
 
     <p> Juego inexistente</p>
