--- a/views/pages/addGamePage.ejs
+++ b/views/pages/addGamePage.ejs
@@ -1,18 +1,23 @@
 <h1>Añadir juego a Base de Datos</h1>
 
 <form action="/games/addGame" method="POST">
-<fieldset>
-	<% if (locals.error) { %>
-		<p><strong><%= locals.error %></strong></p>
-	<% } %>
-	<% if (locals.exito) { %>
-		<p><strong><%= locals.exito %></strong></p>
-	<% } %>
-	<legend> Añadir Juego</legend>
-	<label>Titulo:</label> <input type="text" name="title" /> <p></p>
-	<label >Descripcion:</label> <input type="text" name="description" style= "width: 90%;height: 40px;"> <p></p>
-	<label>Nota:</label> <input type="text" name="rating" /><p></p>
-	<label>Número Favoritos:</label> <input type="text" name="favNumber" /><p></p>
-	<label>Id compañía:</label> <input type="text" name="company_id" /><p></p>
-	<button type="submit">Enviar</button>
-</fieldset>
+    <fieldset>
+        <% if (locals.error) { %>
+            <p><strong><%= locals.error %></strong></p>
+        <% } %>
+        <% if (locals.exito) { %>
+            <p><strong><%= locals.exito %></strong></p>
+        <% } %>
+        <legend> Añadir Juego</legend>
+        <label>Titulo:</label> <input type="text" name="title"/>
+        <p></p>
+        <label>Descripcion:</label> <input type="text" name="description" style="width: 90%;height: 40px;">
+        <p></p>
+        <label>Nota:</label> <input type="text" name="rating"/>
+        <p></p>
+        <label>Número Favoritos:</label> <input type="text" name="favNumber"/>
+        <p></p>
+        <label>Id compañía:</label> <input type="text" name="company_id"/>
+        <p></p>
+        <button type="submit">Enviar</button>
+    </fieldset>
