Metido mayoria de cambios como Ej3

--- a/views/pages/addGamePage.ejs
+++ b/views/pages/addGamePage.ejs
@@ -9,15 +9,16 @@
             <p><strong><%= locals.exito %></strong></p>
         <% } %>
         <legend> Añadir Juego</legend>
-        <label>Titulo:</label> <input type="text" name="title"/>
+        <label>Titulo:</label> <input type="text" name="title"/><%- helpers.error(errores, 'title') %>
         <p></p>
-        <label>Descripcion:</label> <input type="text" name="description" style="width: 90%;height: 40px;">
+        <label>Descripcion:</label> <input type="text" name="description" style="width: 80%;height: 40px;"><%- helpers.error(errores, 'description') %>
         <p></p>
-        <label>Nota:</label> <input type="text" name="rating"/>
+        <label>Nota:</label> <input type="text" name="rating"/><%- helpers.error(errores, 'rating') %>
         <p></p>
-        <label>Número Favoritos:</label> <input type="text" name="favNumber"/>
+        <label>Número Favoritos:</label> <input type="text" name="favNumber"/><%- helpers.error(errores, 'favNumber') %>
         <p></p>
-        <label>Id compañía:</label> <input type="text" name="company_id"/>
+        <label>Id compañía:</label> <input type="text" name="company_id"/><%- helpers.error(errores, 'company_id') %>
         <p></p>
         <button type="submit">Enviar</button>
     </fieldset>
+</form>
