--- a/views/pages/addGamePage.ejs
+++ b/views/pages/addGamePage.ejs
@@ -19,6 +19,8 @@
         <p></p>
         <label>Id compañía:</label> <input type="text" name="company_id"/><%- helpers.error(errores, 'company_id') %>
         <p></p>
+        <label>URL imagen:</label> <input type="text" name="url_image"/><%- helpers.error(errores, 'url_image') %>
+        <p></p>
         <button type="submit">Enviar</button>
     </fieldset>
 </form>
