--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,7 +7,7 @@
     <% gameList.forEach(game => { %>
     <div class="bloque-index">
         <h4><a href="/games/<%= game.id %>"><%= game.title %></a></h4>
-        <p><a href="/games/<%= game.id %>">IMAGEN</a></p>
+        <p><a href="/games/<%= game.id %>"><img src="<%= game.image %>" alt="Imagen de <%= game.title %>"></a></p>
     </div>
     <% }); %>
 </div>
