--- a/views/pages/game.ejs
+++ b/views/pages/game.ejs
@@ -1,16 +1,16 @@
 <% adminOptions(session) %>
 
 <section>
-    <div id="juego_info_superior">
-        <div id="juego_info">
+    <div class="juego_info_superior">
+        <div class="juego_info">
             <% showGameInfo() %>
         </div>
-        <div id="juego_info2">
+        <div class="juego_info2">
             <% showGameInfo2() %>
         </div>
     </div>
 
-    <div id="juego_info3">
+    <div class="juego_info3">
         <% showGameInfo3() %>
     </div>
 </section>
@@ -29,39 +29,34 @@
 <section><%- include('foro') %></section>
 
 <% function showGameInfo(){ %>
-    <h1><%= game.title %></h1>
+    <h1><u><%= game.title %></u></h1>
+    <a href="/games/<%= game.id %>"><img src="<%= game.image %>" alt="Imagen de <%= game.title %>"></a>
     <p>Valoracion media: <%= game.rating %></p>
-
-    <% function showGameInfo(){ %>
-    <h1><%= game.title %></h1>
-    <p>Valoracion media: <%= game.rating %></p>
-
     <p>Numero Favoritos: <%= game.favNumber %></p>
+    
 
-    <p>IMAGENES</p>
-    <p></p>
-
-    <p>Descripción: <%= game.description %></p>
     <%- include('showGameGenres') %>
-    <% } %>
-
-    <p>Descripción: <%= game.description %></p>
 
 <% } %> <% function showGameInfo2(){ %>
-    <p>Pienso comprarlo</p>
+    
 
-    <p>Disponible en:</p>
+    <p><u>Descripción del juego</u>:  <%= game.description %></p>
+    <p><u>Desarrollado por</u>: Empresa 1</p>
 
-    <p>TIENDA1</p>
-    <p>TIENDA2</p>
-    <p></p>
+    <p><u>Publicado por</u>: Empresa 2</p>
+    <p><u>Añadir a tu lista personal</u> :<button> Añadir</button></p>
 
-    <p>.....</p>
+    <p>Disponible en las siguientes tiendas :</p>
+
+    <p><li>TIENDA1</li></p>
+    <p><li>TIENDA2</li></p>
+    <p><li>TIENDA3</li></p>
+    <p><li>TIENDA4</li></p>
+
+
 <% } %>
 <% function showGameInfo3(){ %>
-    <p>Desarrollado por:</p>
 
-    <p>Publicado por:</p>
 
     <h3>Noticias & Guías:</h3>
 
