--- a/views/pages/listajuegos.ejs
+++ b/views/pages/listajuegos.ejs
@@ -25,21 +25,27 @@
 </form>
 <% addGameOption() %>
 
-<div id="game_list">
-    <% showGameList() %>
+<div class="game_list">
+    <div class="game_list_grid">
+        <% gameList.forEach(game=>{ %>
+            <div class="game-card">
+                <h3><a href="/games/<%= game.id %>"><%= game.title %></a></h3>
+                <a href="/games/<%= game.id %>"><img src="<%= game.image %>" alt="Imagen de <%= game.title %>"></a>
+                <div class="game-info">
+                    <p>Valoración: <%= game.rating %></p>
+                    <p>Favoritos: <%= game.favNumber %></p>
+                </div>
+                <p class="game-description"><%= game.description %></p>
+            </div>
+         <% }) %>
+    </div>
 </div>
 
-<% function showGameList() { %>
-    <% gameList.forEach(game=>{ %>
-
-        <div id="juego_info_in_list">
-            <% showGameInfo(game) %>
-        </div>
-<% })} %>
+    
 
 <% function showGameInfo(game){ %>
     <h3 style="margin-left: 20px;"><a href="/games/<%= game.id %>"><%= game.title %></a></h3>
-    <p>IMAGEN</p>
+    <p><a href="/games/<%= game.id %>"></a><img src="<%= game.image %>"></a></p>
     <p style="margin-left: 20px;">Valoracion media: <%= game.rating %> </p>
     <p style="margin-left: 20px;"> Numero Favoritos: <%= game.favNumber %> </p>
 
