añadido eliminar review por admin

--- a/views/pages/reviews/userReviews.ejs
+++ b/views/pages/reviews/userReviews.ejs
@@ -17,5 +17,12 @@
     <p> <%= rev.rating%></p>
     <p></p>
     <p></p>
-
+    <% if(session.esAdmin) {%>
+<!--
+    TODO: boton para eliminar review
+-->
+        <form action = "/review/deleteReview/" method = "POST">
+            <button type ="submit">Eliminar review</button>
+        </form>
+    <% }%>
 <% } %>
